fix: remove namespace from kustomization to prevent auto-creation
Namespace is managed by homelab-platform/namespaces.
Each resource already has namespace: mirai set explicitly.

[skip ci]

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -10,8 +10,8 @@ images:
 - name: ghcr.io/sojohnnysaid/mirai-app/mirai-frontend
   newTag: d9f16b5
 
-namespace: mirai
+# namespace managed by platform repo, each resource has namespace set explicitly
 
-commonLabels:
+labels:
   app.kubernetes.io/name: mirai-frontend
   app.kubernetes.io/part-of: mirai
