--- a/k8s/redis/redis-deployment.yaml
+++ b/k8s/redis/redis-deployment.yaml
@@ -1,8 +1,4 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: redis
----
+# Namespace redis is managed separately
 apiVersion: v1
 kind: ConfigMap
 metadata:
